fix section three overflow issue

--- a/src/Components/SectionThree/SectionThree.css
+++ b/src/Components/SectionThree/SectionThree.css
@@ -30,10 +30,11 @@
 }
 
 .EmpowerCtn .EmpowerTxt {
-  height: 230px;
+  height: 220px;
   margin-top: 10px;
   padding: 25px;
   background-color: #06a9ca;
+  overflow: hidden;
 }
 
 .EmpowerCtn .EmpowerTxt h3 {
